compiler/tests/fail/arm-m4/intrinsic_smul_hwS.jazz
export
fn smul_hw(reg u32 x y) -> reg u32 {
    reg u32 r;
    ?{}, r = #SMULBBS(x, y);
    return r;
}
